--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <button id="redirectBtn" style="display: none;">Scholarship Karnataka</button>
+    <h2>Welcome to Scholarship Finder</h2>
+    <p>Location access is optional but helps us serve you better.</p>
+    <button id="redirectBtn">Scholarship Karnataka</button>
   </div>
 
   <script src="script.js"></script>
