--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h2>Welcome to Scholarship Finder</h2>
-    <p>Location access is optional but helps us serve you better.</p>
+    <p>Namaskara Bengaluru</p>
     <button id="redirectBtn">Scholarship Karnataka</button>
   </div>
 
