--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
   <div class="container">
     <h2>Welcome to Scholarship Finder</h2>
-    <p>Namaskara Bengaluru</p>
-    <button id="redirectBtn">Scholarship Karnataka</button>
+    <p id="message">Namaskara Bengaluru</p>
+    <a href="javascript:void(0)" id="checkEligibilityLink">Scholarship Karnataka</a>
+
+    <div id="eligibilityResult" class="result"></div>
   </div>
 
   <script src="script.js"></script>
