--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
   <div class="container">
     <h2>Welcome to Scholarship Finder</h2>
-    <p id="message">Namaskara Bengaluru</p>
-    <a href="javascript:void(0)" id="checkEligibilityLink">Scholarship Karnataka</a>
-
+    <p id="message">Checking your eligibility...</p>
     <div id="eligibilityResult" class="result"></div>
   </div>
 
