--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Welcome to Scholarship Finder</h2>
-    <p id="message">Checking your eligibility...</p>
-    <div id="eligibilityResult" class="result"></div>
+    <button id="redirectBtn" style="display: none;">Scholarship Karnataka</button>
   </div>
 
   <script src="script.js"></script>
