--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Scholarship Karnataka</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>Drive Link Location Access</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <button id="redirectBtn" style="display: none;">Scholarship Karnataka</button>
+    <a href="#" id="driveLink">Open Drive Link</a>
+    <p id="locationInfo"></p>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
+
